# piap

./: NOTES.md  publication.mplstyle
code/: CMakeLists.txt  NOTES.md  README
code/script/: evaluation.py  plot2d.py
code/src/: CanonicalEnsemble.h  Common.cpp  Common.h  Particle.cpp  Particle.h  RandomWalkMetropolis.h  coulomb2d.cpp  coulomb2d_obs.cpp  coulomb3d.cpp  coulomb3d_obs.cpp  lennard_jones2d.cpp  lennard_jones2d_obs.cpp  lennard_jones3d_obs.cpp  main.cpp  test.cpp
report/: .gitignore  report.synctex  report.tex
report/Talk/: Piap_Talk.nav  Piap_Talk.synctex
report/data/: CanonicalEnsemble.tex
report/data/coulomb2d/: 2016_03_19_09_31_29.csv  2016_03_19_09_46_59.csv  2016_03_19_10_32_16.csv  2016_03_19_11_32_54.csv  2016_03_19_12_35_44.csv  2016_03_19_13_17_28.csv  2016_03_19_13_38_10.csv  2016_03_19_14_39_13.csv  2016_03_19_15_40_28.csv  2016_03_19_16_06_33.csv  2016_03_19_16_41_58.csv  2016_03_19_17_43_13.csv  2016_03_19_18_44_14.csv  2016_03_19_19_46_45.csv  2016_03_19_20_48_14.csv  2016_03_19_21_50_03.csv  2016_03_20_09_21_15.csv  2016_03_20_10_21_58.csv  2016_03_20_12_55_48.csv  2016_03_20_15_58_14.csv  multiple_simulations.csv  settings.txt
report/data/coulomb3d/: 2016_03_20_11_50_27.csv  2016_03_20_12_56_44.csv  2016_03_20_14_01_41.csv  2016_03_20_15_06_03.csv  2016_03_20_16_12_20.csv  2016_03_20_17_18_18.csv  2016_03_20_18_21_43.csv  2016_03_20_19_25_19.csv  2016_03_20_20_29_19.csv  2016_03_20_21_32_55.csv  2016_03_21_09_08_44.csv  2016_03_21_10_16_57.csv  2016_03_21_12_01_16.csv  2016_03_21_13_05_02.csv  settings.txt  (+2 more)
report/figures/: canonical_ensemble.ipe
report/scripts/: 2D_visualization.py  3DAnimation.py  out.tsv  potential_plots.py  temp_dep_coulomb2d.py  temp_dep_coulomb3d.py  temp_dep_lennard_jones2d.py  temp_dep_lennard_jones3d.py
results/1Mio_unif_30acc/: observables.csv  results.txt
results/400000_samples/: observables.csv  result.txt
results/400000_samples_2/: observables.csv
results/800000_samples/: observables.csv  result.txt
results/Unif_Test/: observables.csv  results.txt
results/Unif_Test_400000/: observables.csv  results.txt
results/Unif_Test_400000_30acc/: observables.csv  results.txt
results/Unif_Test_800000_30acc/: observables.csv  results.txt
results/bigger_box/: observables.csv  result.txt
results/correct_avg_distance/: observables.csv  result.txt
results/more_samples/: observables.csv  result.txt
results/wrong_avg_distance/: result.txt
talk/: .gitignore  talk.tex
talk/Animation/: crystal.avi
talk/figures/: Beta_Setting.ipe  Beta_setting_all.tex  Delta_Setting.ipe  Delta_setting_all.tex  Dim_setting.ipe  Dim_setting_all.tex  Empty_Setting.ipe  N_setting.ipe  N_setting_all.tex  Size_setting.ipe  Size_setting_all.tex  impl.ipe
talk/scripts/: potential_plots.py
(+71 files in other folders)
